# stonefall.io

./: .gitignore  .mvn-classpath  .run.swp  CMakeLists.txt  README.md  c++_style_guide.txt  index.html  main.cpp  mem_perf_guide.md  pom.xml  stonefall  stonefall.cbp
Stonefall/: GridBlock.cpp  GridEntity.h  Killable.h  main.cpp
Stonefall/Structure/: Base.h
css/: index.css
src/cpp/: Constants.h  Game.cpp  Game.h  GameState.h  GridBlock.cpp  GridBlock.h  GridEntity.h  Killable.h  Player.cpp  Player.h  main.cpp
src/cpp/AbstractClasses/: GridEntity.h  Killable.h
src/cpp/Config/: ReleaseConstants.h  TestConstants.h  Utility.h
src/cpp/Crypto/: Crypto.cpp  Crypto.h
src/cpp/Game/: Game.cpp  Game.h  GameState.cpp  Player.cpp  Player.h
src/cpp/Interfaces/: GridEntity.h  Killable.h
src/cpp/Main/: GameManager.cpp  GameManager.h  main.cpp
src/cpp/Map/: Grid.cpp  Grid.h  GridBlock.cpp  GridBlock.h  GridDistance.h
src/cpp/Pathing/: AStar.cpp  AStar.h
src/cpp/Server/: PageRequestHandler.cpp  PageRequestHandler.h  RequestHandlerFactory.cpp  RequestHandlerFactory.h  WebSocketRequestHandler.cpp  WebSocketRequestHandler.h  WebSockets.cpp  Websockets.cpp  Websockets.h
src/cpp/Structure/: Base.cpp  Base.h  Mine.cpp  Mine.h  Resource.cpp  Resource.h  Scaffold.cpp  Scaffold.h  Turret.cpp  Turret.h  Wall.cpp  Wall.h
src/cpp/Test/: Catch.h  Test.cpp
src/cpp/Unit/: Attacker.cpp  Attacker.h
src/main/java/edu/brown/cs/stonefall/bots/: BotManager.java
src/main/java/edu/brown/cs/stonefall/game/: Constants.java  DefenseBot.java  Game.java  GameState.java  HumanPlayer.java  Pair.java  Player.java
src/main/java/edu/brown/cs/stonefall/interfaces/: Player.java
src/main/java/edu/brown/cs/stonefall/main/: Main.java
src/main/java/edu/brown/cs/stonefall/map/: Grid.java
src/main/java/edu/brown/cs/stonefall/network/: SparkHandler.java  WebSockets.java
src/main/resources/spark/template/freemarker/: about.ftl  full.ftl  login.ftl
src/main/resources/static/css/: login.css
src/main/resources/static/js/: Game.js  Handlers.js  Penciller.js  WebSockets.js  canvas.js
src/web/: full.html  gameover.html  index.html  instructions.html  play.html  wow.html
src/web/example/: initialRequest.json  initialResponse.json
src/web/js/: Game.js  WebSockets.js  main.js
